# FENCE

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
assets/: build.md  dataset.md  pixabay.md  placeholder.md  structure.md
csv/: FENCE_benchmark.csv  FENCE_benchmark_benign.csv
placeholder/: placeholder_alias.json
scripts/: download_pixabay_images.py  generate_dataset.py  replace_placeholder.py
